Fix display of footer sitemap columns on small displays

--- a/static/css/mixxx.css
+++ b/static/css/mixxx.css
@@ -373,6 +373,12 @@ img.center
     {
         display: inherit!important;
     }
+
+    .footer_sitemap_column
+    {
+        width: auto;
+        margin-right: 20px;
+    }
 }
 
 
